Better rant (EasterEgg)

--- a/brightness/data/rant.html
+++ b/brightness/data/rant.html
@@ -1,1 +1,12 @@
-<h1>Really are you trying to exploit my device?</h1><br></br><a>Your interest deserves my attention, please write me to crushedice2000@gmail.com (AKA Helio)</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>You've gone too far</title>
+  </head>
+  <body>
+    <h1>Really are you trying to exploit my device?</h1>
+    <br>
+    <a>Your interest should deserve my attention.</a>
+    <a>Please write me to crushedice2000@gmail.com (AKA Helio)</a>
+  </body>
+</html>
