--- a/data/easter_egg.html
+++ b/data/easter_egg.html
@@ -7,6 +7,6 @@
     <h1>Really, did you expect a SQL server on this small device?</h1>
     <br>
     <a>Your interest on hacking this device deserves my attention.</a>
-    <a>Please write me to crushedice2000@gmail.com</a>
+    <a>Please write me to {{0x2b3bfa0}}</a>
   </body>
 </html>
